# family-manager

./: Cargo.toml  README.md  diesel.toml
docs/: development_faq.md
src/: application.rs  infrastructure.rs  lib.rs  main.rs
src/application/: create_document_command.rs  document_repository.rs  get_document_query.rs
src/domain/: document.rs
src/infrastructure/: app_state.rs  document_collection.rs  document_dto.rs  document_handler.rs
