[package]
name = "family-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = "0.14"
axum = { version = "0.6", features = ["multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
diesel = { version = "1.4.8", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
